Fixed misalignment of 'Pipeline' label on history page header for firefox

--- a/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
@@ -3853,7 +3853,8 @@ ul.entity_title {
 
 #pipeline_activity_header {
   .label {
-    top: -10px;
+    left: 0px;
+    top:  -10px;
   }
 }
 
